[project]
name = "ai-equity-research"
version = "0.1.0"
requires-python = ">=3.10,<3.12"  # Broader compatibility for Render
description = "AI-powered equity research platform"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    # Dependencies are in requirements.txt for Render deployment
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
